--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
   <section>
     <div class="container flex">
-      <h2>Skills</h2>
+      <h2 class="skills-text">Skills</h2>
         <ul class="skills">
           <li>Git</li>
           <li>Linux</li>
