--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
   <header>
     <nav class="menu">
       <div class="language-section">
-        <a href="#" language="english" class="activelang">🇬🇧</a>
-        <a href="#" language="ukrainian">🇺🇦</a>
+        <a language="english" class="activelang">🇬🇧</a>
+        <a language="ukrainian">🇺🇦</a>
       </div>
     </nav>
     <div class="container about-user">
