Add new page and menu elements

--- a/index.html
+++ b/index.html
@@ -13,12 +13,17 @@
 <body>
   <header>
     <nav class="menu">
+      <div class="menu-section">
+        <a href="#about-me" class="about-me-link">About Me</a>
+        <a href="#skills" class="skills-link">Skills</a>
+        <a href="contact.html" class="contact-link">Contact</a>
+      </div>
       <div class="language-section">
         <a language="english" class="activelang">🇬🇧</a>
         <a language="ukrainian">🇺🇦</a>
       </div>
     </nav>
-    <div class="container about-user">
+    <div class="container about-user" id="about-me">
       <div>
         <h1 class="title">Hi, I am Mykyta, Junior Front-End Developer</h1>
         <ul class="info">
@@ -33,7 +38,7 @@
     </div>
   </header>
 
-  <section>
+  <section id="skills">
     <div class="container flex">
       <h2 class="skills-text">Skills</h2>
         <ul class="skills">
@@ -71,6 +76,6 @@
   </footer>
 
   <script src="https://kit.fontawesome.com/0f685e780c.js" crossorigin="anonymous"></script>
-  <script src="lang.js"></script>
+  <script src="home-lang.js"></script>
 </body>
 </html>
